--- a/BookNest.html
+++ b/BookNest.html
@@ -215,19 +215,19 @@
 
         <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
         <p>
-            image
+            <img src="Images/User_persona.jpg">
         </p>
         </div>
 
         <div data-aos="fade-left" data-aos-duration="2000">
         <h1>
-            Empathy Mapping
+            Affinity Mapping
         </h1>
         </div>
 
         <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
         <p>
-            image
+            <img src= "Images/Affnity_Mapping.jpg">
         </p>
         </div>
 
@@ -250,6 +250,10 @@
             low priority features to app. This helped me to decide which features to include first on in Booknest. 
         </p>
         </div>
+
+        <div>
+            <img src="Images/Feature_Priortization_Matrix (1).jpg">
+        </div>
     </div>
 </section>
 
@@ -260,7 +264,7 @@
         </h1>
 
         <p>
-            
+            <img src="Images/Flow_Chart.jpg">
         </p>
     </div>
 </section>
