--- a/BookNest.html
+++ b/BookNest.html
@@ -214,9 +214,9 @@
         </div>
 
         <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-        <p>
-            <img src="Images/User_persona.jpg">
-        </p>
+        
+            <img class= "User_persona" src="Images/User_persona.jpg">
+        
         </div>
 
         <div data-aos="fade-left" data-aos-duration="2000">
